--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <form action="" method="post" onsubmit="sendEmail(); reset(); return false;">
+     <form action="https://formsubmit.co/mwangiwahome70@gmail.com" method="POST">
         <h2>Get in touch with us</h2>
         <input type="text" name="name" placeholder="Your name" id="name">
         <input type="text" name="phone" id="phone" placeholder="Phone number">
@@ -15,24 +15,5 @@
         <textarea id="message" cols="30" rows="10" placeholder="Type a message"></textarea>
         <button type="submit">Send</button>
     </form>
-    <!-- SMTP.JS -->
-    <!-- Allow messages to be sent to your email from the website -->
-    <script src="https://smtpjs.com/v3/smtp.js"></script>
-    <script>
-        function sendEmail() {
-            Email.send({
-                // SMTP Server
-                Host : "smtp.elasticemail.com",
-                Username : "mwangiwahome70@gmail.com",
-                Password : "STEVE@100",
-                To : 'mwangiwahome70@gmail.com',
-                From : document.getElementById("email").value,
-                Subject : "New Contact form Enquiry",
-                Body : "Name: " + document.getElementById("name").value + "<br> Email: " + document.getElementById("email").value  + "<br> Phone no: " + document.getElementById("phone").value  + "<br> Message: " + document.getElementById("message").value
-            }).then(
-            message => alert("Message sent successfully")
-            );
-        }
-    </script>
 </body>
 </html>
